# CPM_FM

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CPM_FM.md  Python.code-workspace  README.md  _pyinstaller_common.py  build_dist.py  cpm_fm_manual.md  pyinstaller_linux.spec  pyinstaller_macos.spec  pyinstaller_windows.spec  pyproject.toml  serial_settings.json
.claude/: settings.json
.claude/hooks/: require-venv.sh
.clinerules/: requirements-context.md  tooling_notes.md
.codex/: hooks.json
.continue/rules/: CONTINUE.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  hardware_serial_report.yml
.github/workflows/: ci.yml
Workflows/: code-requirements-align.md  context-budget-audit.md  defect-investigator.md  handoff.md  pre-commit-checks.md  requirements-check.md  test-quality-checker.md
assets/: icon.icns
docs/: App_Design.md  App_Requirements.md  cpm_fm_architecture.md  cpm_fm_requirements.md  cpm_parser_documentation.md  dev_guideline.md  disk_image_design.md  manual_test_plan.md  manual_test_scorecard.md  requirements_change_history.md  requirements_issue_log.md  xmodem_specs.md
docs/requirements_views/: README.md  code_to_requirements.json  code_to_requirements.md  requirements_index.md  (+2 more)
examples/: Elite_SC131.json  MinZ.json  RC2014_Z_Pro.json  RC2014_mini.json  Rotten_Snow.json  eZT-RCB.json  elite_mini.json  multi_dev.json  sc10x_z50bus.json  serial_settings_eZT-RCB.json  serial_settings_elite_mini.json  serial_settings_elite_mini_linux.json  serial_settings_multi_dev.json  settings_a.json
integration/: .gitignore  README.md  conftest.py  hil_config.example.json  pytest.ini  run.py  test_context_menu.py  test_gui_backup_restore.py  test_gui_conflict.py  test_gui_connect.py  test_gui_dragdrop.py  test_gui_history.py  test_gui_validation.py  test_protocol_listing.py  test_protocol_transfers.py  test_smoke.py  test_terminal_window.py  test_visual_assertions.py
package/: README.md
src/: main.py
tests/: test_backup_restore.py  test_boot_sequence.py  test_config_handler.py  test_conflict_resolution.py  test_cpm_parser.py  test_debug_log.py  test_file_filter.py  test_filename_validation.py  test_gui_smoke.py  test_i18n.py  test_macros.py  test_port_filter.py  test_serial_manager.py  test_temp_cleanup.py  test_term_translate.py  test_terminal_view.py  test_traceability_tooling.py  test_transfer_history.py  test_user_area.py  test_version.py  test_vt100_engine.py  test_window_state.py  test_xmodem.py
tools/: make_icons.py  transport_diag.py
(+105 files in other folders)
