[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpm-fm"
version = "0.1.0"
description = "CP/M File Manager - transfer files to/from legacy CP/M systems over serial (XModem)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["pyserial>=3.5", "PySide6>=6.6", "qt-material>=2.14"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/turbo-gecko/CPM_FM"

# GUI app: gui-scripts binds the launcher to pythonw.exe, so no console window
# appears behind the Tk window on Windows.
[project.gui-scripts]
cpm-fm = "cpm_fm.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
ignore_missing_imports = true
files = ["src"]
