[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpm-fm"
version = "0.1.0"
description = "CP/M File Manager - transfer files to/from legacy CP/M systems over serial (XModem)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["pyserial>=3.5", "PySide6>=6.6", "qt-material>=2.14"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "Pillow>=10"]
# Tooling for building standalone distribution packages (see build_dist.py and
# the pyinstaller_*.spec files). Install with: pip install -e .[build]
build = ["pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/turbo-gecko/CPM_FM"

# GUI app: gui-scripts binds the launcher to pythonw.exe, so no console window
# appears behind the Tk window on Windows.
[project.gui-scripts]
cpm-fm = "cpm_fm.app:main"

[tool.setuptools.packages.find]
where = ["src"]

# DR-042: ship the per-language string files (lang_<language>.txt) inside the
# package so internationalisation works from an installed wheel, not just from
# a source/editable checkout.
# DR-044: likewise ship the runtime window icon (icons/cpm-fm.png) as package
# data so the branded icon (UIR-078) is present in an installed wheel.
[tool.setuptools.package-data]
cpm_fm = ["lang/*.txt", "icons/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
ignore_missing_imports = true
files = ["src"]
